{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 126,
  "lineage": "6385efff-78c1-d05e-ff9f-07d24fa9bfe0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "akbun-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:internet-gateway/igw-0c66e09ec7def6df2",
            "id": "igw-0c66e09ec7def6df2",
            "owner_id": "309351180660",
            "tags": {
              "Name": "t101-igw"
            },
            "tags_all": {
              "Name": "t101-igw"
            },
            "vpc_id": "vpc-079d82ee807ee5f10"
          },
          "dependencies": [
            "aws_vpc.akbun-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "akbun-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:loadbalancer/app/t101-alb/13aa1760fda61131",
            "arn_suffix": "app/t101-alb/13aa1760fda61131",
            "desync_mitigation_mode": "defensive",
            "dns_name": "t101-alb-2102494589.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:loadbalancer/app/t101-alb/13aa1760fda61131",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "t101-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cf6fecfc4e068139"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0809e50de08fded7b"
              },
              {
                "subnet_id": "subnet-0a0bb40f58d6cc88a"
              }
            ],
            "subnets": [
              "subnet-0809e50de08fded7b",
              "subnet-0a0bb40f58d6cc88a"
            ],
            "tags": {
              "Name": "t101-alb"
            },
            "tags_all": {
              "Name": "t101-alb"
            },
            "vpc_id": "vpc-079d82ee807ee5f10",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.akbun-mysg",
            "aws_subnet.akbun-subnet1",
            "aws_subnet.akbun-subnet2",
            "aws_vpc.akbun-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "myhttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:listener/app/t101-alb/13aa1760fda61131/caf89852e86b585e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found - T101 Study",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:listener/app/t101-alb/13aa1760fda61131/caf89852e86b585e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:loadbalancer/app/t101-alb/13aa1760fda61131",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.akbun-alb",
            "aws_security_group.akbun-mysg",
            "aws_subnet.akbun-subnet1",
            "aws_subnet.akbun-subnet2",
            "aws_vpc.akbun-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "akbun-albrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:targetgroup/t101-alb-tg/95daf1ac3d52ac8a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:listener-rule/app/t101-alb/13aa1760fda61131/caf89852e86b585e/8dad4b3c4bc43e2c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:listener-rule/app/t101-alb/13aa1760fda61131/caf89852e86b585e/8dad4b3c4bc43e2c",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:listener/app/t101-alb/13aa1760fda61131/caf89852e86b585e",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.akbun-alb",
            "aws_lb_listener.myhttp",
            "aws_lb_target_group.akbun-tg",
            "aws_security_group.akbun-mysg",
            "aws_subnet.akbun-subnet1",
            "aws_subnet.akbun-subnet2",
            "aws_vpc.akbun-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "akbun-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:targetgroup/t101-alb-tg/95daf1ac3d52ac8a",
            "arn_suffix": "targetgroup/t101-alb-tg/95daf1ac3d52ac8a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:309351180660:targetgroup/t101-alb-tg/95daf1ac3d52ac8a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "t101-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-079d82ee807ee5f10"
          },
          "dependencies": [
            "aws_vpc.akbun-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "akbun-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:route-table/rtb-0f03e527df806ae5b",
            "id": "rtb-0f03e527df806ae5b",
            "owner_id": "309351180660",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "t101-rt"
            },
            "tags_all": {
              "Name": "t101-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-079d82ee807ee5f10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.akbun-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "akubun-rt-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e4bced8f00c2cf5",
            "route_table_id": "rtb-0f03e527df806ae5b",
            "subnet_id": "subnet-0809e50de08fded7b"
          },
          "dependencies": [
            "aws_route_table.akbun-rt",
            "aws_subnet.akbun-subnet1",
            "aws_vpc.akbun-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "akubun-rt-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0083eb94eefd9b689",
            "route_table_id": "rtb-0f03e527df806ae5b",
            "subnet_id": "subnet-0a0bb40f58d6cc88a"
          },
          "dependencies": [
            "aws_route_table.akbun-rt",
            "aws_subnet.akbun-subnet2",
            "aws_vpc.akbun-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "akbun-mysg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:security-group/sg-0cf6fecfc4e068139",
            "description": "T101 Study SG",
            "egress": [],
            "id": "sg-0cf6fecfc4e068139",
            "ingress": [],
            "name": "T101 SG",
            "name_prefix": "",
            "owner_id": "309351180660",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-079d82ee807ee5f10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.akbun-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mysginbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2691546818",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cf6fecfc4e068139",
            "security_group_rule_id": "sgr-03336aac8ef4e6774",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.akbun-mysg",
            "aws_vpc.akbun-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mysgoutbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2068773490",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0cf6fecfc4e068139",
            "security_group_rule_id": "sgr-0096ff722fb308469",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.akbun-mysg",
            "aws_vpc.akbun-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "akbun-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:subnet/subnet-0809e50de08fded7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0809e50de08fded7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309351180660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "t101-subnet1"
            },
            "tags_all": {
              "Name": "t101-subnet1"
            },
            "vpc_id": "vpc-079d82ee807ee5f10"
          },
          "dependencies": [
            "aws_vpc.akbun-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "akbun-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:subnet/subnet-0a0bb40f58d6cc88a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0bb40f58d6cc88a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "309351180660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "t101-subnet2"
            },
            "tags_all": {
              "Name": "t101-subnet2"
            },
            "vpc_id": "vpc-079d82ee807ee5f10"
          },
          "dependencies": [
            "aws_vpc.akbun-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "akbun-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:309351180660:vpc/vpc-079d82ee807ee5f10",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02bad529a52301e24",
            "default_route_table_id": "rtb-048285d557e391e63",
            "default_security_group_id": "sg-056eb447a5bf8a1d3",
            "dhcp_options_id": "dopt-0f0dc59896b00d9cc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-079d82ee807ee5f10",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048285d557e391e63",
            "owner_id": "309351180660",
            "tags": {
              "Name": "t101-study"
            },
            "tags_all": {
              "Name": "t101-study"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}